# pyInstanceSpace

./: .gitignore  CLIDocs.txt  Dockerfile  README.md  STIFED_time.csv  beforeavg.csv  cloister_timing.csv  example_plugin.py  integration_demo.ipynb  integration_demo.py  package-lock.json  pilot_time.csv  preprocessing_time.csv  pyproject.toml  pythia_time.csv  python_cv_indices_0.csv  python_cv_indices_1.csv  python_cv_indices_2.csv  python_cv_indices_3.csv  python_cv_indices_4.csv  python_cv_indices_5.csv  python_cv_indices_6.csv  python_cv_indices_7.csv  python_cv_indices_8.csv  python_cv_indices_9.csv  requirements.txt  run_performance.sh  temp.py  test.py  test_indices_algo_0_fold_0.csv  test_indices_algo_0_fold_1.csv  test_indices_algo_0_fold_2.csv  test_indices_algo_0_fold_3.csv  test_indices_algo_0_fold_4.csv  test_indices_algo_1_fold_0.csv  test_indices_algo_1_fold_1.csv  test_indices_algo_1_fold_2.csv  test_indices_algo_1_fold_3.csv  test_indices_algo_1_fold_4.csv  test_indices_algo_2_fold_0.csv  (+91 more)
.github/workflows/: Linting-test.yml  automerge.yml  docker-build.yml  linting-test.yml  merge-requirements-tests.yml  test-workflow.yml  validation-tests.yml
Meetings/: meetingMinuteTemplate.md
Meetings/Agile Ceremonies/Sprint 1/: Planning.md
Meetings/Client Meetings/: Client_Meeting_3_15.md  Client_Meeting_3_27.md
Meetings/Supervisor Meetings/: Supervisor_Meeting_3_15.md  Supervisor_Meeting_3_23.md
Meetings/Team Meetings/: Team_Meeting_3_15.md  Team_Meeting_3_23.md  Team_Meeting_3_29.md
WeeklyReports/Sem1/ChengZeLam/: w3.md  w4.md  w5.md
WeeklyReports/Sem1/DongHyeogJang/: w3.md  w4.md
WeeklyReports/Sem1/JiayingYi/: w3.md  w4.md
WeeklyReports/Sem1/JunhengChen/: JunhengChen-W3.md  JunhengChen-W4.md
WeeklyReports/Sem1/KianDsouza/: Week3.md  Week4.md
WeeklyReports/Sem1/Kushagra/: w3_Kushagra.md  w4_Kushagra.md
WeeklyReports/Sem1/NathanHarvey/: w3.md
app/: main.py
backend/: SIFTED.m  SIFTED2.m  buildIS.m  options.json
demo/: demo.ipynb
instancespace/: __init__.py  _serialisers.py  example.ipynb  instance_space.py  model.py  progress_reporter.py  stage_builder.py  stage_runner.py
instancespace/data/: model.py  options.py
instancespace/stages/: cloister.py  pilot.py  prelim.py  preprocessing.py  pythia.py  sifted.py  trace.py
matilda/: CLOISTER.py  Cross_Validation_kfold.ipynb  FILTER.py  PILOT.py  PRELIM.py  PYTHIA.py  PYTHIA_Tao.ipynb  SIFTED.py  TRACE.py  Untitled.ipynb  __init__.py  _serialisers.py  _serializers.py  build.py  buildIS.py  cli.py  cloister.py  conductor.py  conductor_annotations.py  conductor_types.py  cv_result_.csv  example.ipynb  exampleWeb.py  filter.py  fitlibsvm.ipynb  fitmatsvm.ipynb  instance_space.py  model.py  new_instance_space.py  pilot.py  prac.ipynb  prelim.py  pythia.ipynb  pythia.py  pythia2.py  pythia_tao.py  scriptpng.py  sifted.ipynb  sifted.py  stage.py  (+4 more)
matilda/data/: PYTHIA.m  __init__.py  default_options.py  metadata.py  model.py  option.py  options.py  z.csv  z_norm.csv
matilda/input_fitsvm/: Ybin.csv  parasgrid.csv
matilda/scripting/: __init__.py  script_csv.py  script_disc.py  script_fcn.py  script_png.py  script_web.py  scriptcsv.py  scriptdisc.py  scriptfcn.py  scriptweb.py
matilda/stages/: Stage.py  __init__.py  build.py  build_stage.py  cloister.py  cloister_stage.py  filter.py  output.csv  pilot.py  pilot_stage.py  pre_processing.py  prelim.py  prelim_stage.py  preprocessing.py  preprocessing_stage.py  pythia.py  pythia_stage.py  sifted.py  sifted_stage.py  stage.py  trace.py  trace_stage.py
matilda/utils/: __init__.py  filter.py
tests/: __init__.py  manual_selection.py  output.csv  remove_all_NaN_row.py  remove_all_nan_row.py  summary.csv  t.py  tempCodeRunnerFile.py  test.ipynb  test.py  test_basic.py  test_cloister.py  test_data_processing.py  test_filter.py  test_load_file.py  test_local.py  test_manual_selection.py  test_pilot.py  test_pilotStage.py  test_pilot_cloister.py  test_pilot_pythia.py  test_pilot_stage.py  test_pilot_trace.py  test_prelim.py  test_prelim_filter.py  test_prelim_stage.py  test_prepro_n_prelim.py  test_preprocessing.py  test_pythia.py  test_pythia_input.py  test_pythia_stage.py  test_remove_all_nan_row.py  test_serialisers.py  test_serializers.py  test_sifted.py  test_split_data.py  test_stage_builder_runner.py  test_trace.py
tests/Prelim_out/: model-data-p.csv  model-data-x.csv  model-data-ybin.csv
tests/Trial_files/: options.json
tests/pilot_pythia/: analytic_gaussian_BO.csv  analytic_poly_BO.csv  analytic_poly_grid.csv
tests/process_data/: X_before.csv  Y_before.csv  algolabels_before.txt  featlabels_before.txt
tests/testData_pythia/: al_1_cv_test_fold_5.csv  matlab_cv_indices_10.csv  matlab_cv_indices_4.csv  matlab_cv_indices_5.csv  matlab_cv_indices_6.csv  matlab_cv_indices_9.csv
tests/test_integration/: X.csv  X.mat  Y.csv  options.json
tests/test_pythia_input/: algolabels.csv  matlab_cv_indices_1.csv  matlab_cv_indices_2.csv  matlab_cv_indices_3.csv  matlab_cv_indices_7.csv  matlab_cv_indices_8.csv
tests/test_pythia_output/: matsvm_res.txt  z_norm.csv
tests/utils/: __init__.py  option_creator.py
(+437 files in other folders)
