[tool.poetry]
name = "matilda"
version = "0.1.0"
description = ""
authors = [
    "Your Name <you@example.com>",
    "Nathan Harvey <nhharvey@student.unimelb.edu.au>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.backend]
optional = true

[tool.poetry.group.backend.dependencies]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
