[tool.poetry]
name = "matilda"
version = "0.1.0"
description = ""
authors = [
    "Your Name <you@example.com>",
    "Nathan Harvey <nhharvey@student.unimelb.edu.au>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.backend]
optional = true

[tool.poetry.group.backend.dependencies]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
ruff = "^0.3.4"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
check_ruff = "ruff check --fix"
check_mpyp = "mypy -m matilda"

check = ["check_ruff", "check_mpyp"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "A",
    "COM",
    "DTZ",
    "ICN",
    "INP",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PL",
    "NPY",
    "RUF",
]

ignore = [
    "D203",
    "D212",
]