[tool.poetry]
name = "matilda"
version = "0.1.0"
description = ""
authors = [
    "Your Name <you@example.com>",
    "Kushagra Khare <kharek@student.unimelb.edu.au>",
    "Nathan Harvey <nhharvey@student.unimelb.edu.au>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
pandas-stubs = "^2.2.1.240316"
scikit-learn = "^1.4.2"
click = "^8.1.7"
black = "^24.4.2"
scipy = "^1.13.0"
shapely = "^2.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
poethepoet = "^0.25.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
pdoc = "^14.4.0"
docconvert = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format_docstrings = "docconvert -o numpy matilda/ --in-place"
check_black = "black --preview ."
check_ruff = "ruff check --fix"
check_mypy = "mypy --strict ."

test_black = "black --preview --check ."
test_ruff = "ruff check --no-fix"

check.sequence = ["format_docstrings", "check_black", "check_ruff", "check_mypy"]
check.ignore_fail = "return_non_zero"

test.sequence = ["test_black", "test_ruff", "check_mypy"]
test.ignore_fail = "return_non_zero"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"


[tool.ruff.lint]
extend-select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "A",
    "COM",
    "DTZ",
    "ICN",
    "INP",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PL",
    "NPY",
    "RUF",

    "D107",
    "D211",
    "D212",
    "D402",
    "D410",
    "D415",
    "D417",
]

ignore = [
    "D203",
    "D212",

    # Don't care about too many arguments
    "PLR0913",

    # Temporary, while we are doing stubs
    "ARG001",

    # Deprecated, type annotation on self is unneeded
    "ANN101",

    # Collides with D416
    "D406",

    # Long functions are expected
    "PLR0915",
]

[tool.ruff.lint.pydocstyle]
# Use google style docstrings
convention = "numpy"

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true



[tool.mypy]
disallow_untyped_defs = 'True'

[[tool.mypy.overrides]]
module = [
    'sklearn',
    'scipy.stats',
    'scipy',
    'scipy.spatial',
    'scipy.spatial.distance',
    'shapely.geometry',
    'scipy.linalg',
    'scipy.optimize',
    'scipy.io'
]
ignore_missing_imports = 'True'
